-*-change-log-*-

1.23.x.x (current development version)
	* Deal with extra C sources from preprocessors (#238).
	* Include cabal_macros.h when running c2hs (#2600).
	* Don't recompile C sources unless needed (#2601).
	* Read 'builddir' option from 'CABAL_BUILDDIR' environment variable
	* Add '--profiling-defail=$level' flag with a default for libraries
	  and executables of 'exported-functions' and 'toplevel-functions'
	  respetively (GHC's '-fprof-auto-{exported,top}' flags) (#193).
	* New 'custom-setup' stanza to specify setup deps. Setup is also built
	  with the cabal_macros.h style macros, for conditional compilation.
	* Support Haddock response files (#2746).
	* Fixed a bug in the Text instance for Platform (#2862).
	* New 'setup haddock' option: '--for-hackage' (#2852).
	* New --show-detail=direct; like streaming, but allows the test
	  program to detect that is connected to a terminal, and works
	  reliable with a non-threaded runtime (#2911, and serves as a
	  work-around for #2398)
	* Library support for multi-instance package DBs (#2948).
	* Improved the './Setup configure' solver (#3082, #3076).
	* The '--allow-newer' option can be now used with './Setup
	configure' (#3163).

1.22.0.0 Johan Tibell <johan.tibell@gmail.com> January 2015
	* Support GHC 7.10.
	* Experimental support for emitting DWARF debug info.
	* Preliminary support for relocatable packages.
	* Allow cabal to be used inside cabal exec enviroments.
	* hpc: support mutliple "ways" (e.g. profiling and vanilla).
	* Support GHCJS.
	* Improved command line documentation.
	* Add '-none' constraint syntax for version ranges (#2093).
	* Make the default doc index file path compiler/arch/os-dependent
	(#2136).
	* Warn instead of dying when generating documentation and hscolour
	isn't installed (455f51622fa38347db62197a04bb0fa5b928ff17).
	* Support the new BinaryLiterals extension
	(1f25ab3c5eff311ada73c6c987061b80e9bbebd9).
	* Warn about 'ghc-prof-options: -auto-all' in 'cabal check' (#2162).